--- a/tutorials/xaringan-themer.css
+++ b/tutorials/xaringan-themer.css
@@ -43,7 +43,7 @@
   --header-h3-font-size: 1.75rem;
 
   /* Colors */
-  --text-color: #404040;
+  --text-color: #B25900;
   --header-color: #ff8000;
   --background-color: #FFF2E5;
   --link-color: #ff8000;
